<resources>
    <string name="app_name">appClase6</string>
    <string name="labelNombre">Ingresar nombre</string>
    <string name="labelPaterno">Ingresar apellido paterno</string>
    <string name="labelMaterno">Ingresar apellido materno</string>
    <string name="labelSueldo">Ingresar sueldo</string>
    <string name="labelHijos">Ingresar hijos</string>
    <string name="labelSexo">[Seleccione su Turno]</string>
    <string-array name="sexos">
        <item>Mañana</item>
        <item>Tarde</item>
        <item>Noche</item>
    </string-array>
</resources>