<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="884dp"
        android:orientation="vertical"
        android:padding="15dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="2dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DOCENTE"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="CODIGO"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvCodigo"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="NOMBRE"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/labelNombre"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNombreDatos"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="PATERNO"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/labelPaterno"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPaternoDatos"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="MATERNO"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/labelMaterno"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtMaternoDatos"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="SUELDO"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="HIJOS"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField4"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:hint="@string/labelSueldo"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/account">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtSueldoDatos"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField5"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:hint="@string/labelHijos"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/account">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtHijosDatos"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="SEXO"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField6"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/labelSexo"
            app:startIconDrawable="@drawable/account">

            <AutoCompleteTextView
                android:id="@+id/atvSexoDatos"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:inputType="none"
                app:simpleItems="@array/sexos" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="IMAGEN "
                android:textStyle="bold" />

            <Button
                android:id="@+id/imgDocenteDatos"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:text="Insertar Imagen"
                android:textColorLink="#3D83B8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnModificarDocente"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:backgroundTint="#A81919"
                android:text="Modificar"
                app:cornerRadius="8dp"
                app:icon="@drawable/save" />

            <Button
                android:id="@+id/btnVolverDocente"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:backgroundTint="#393B6A"
                android:text="Cerrar"
                app:cornerRadius="8dp"
                app:icon="@drawable/close_circle" />
        </LinearLayout>

        <Button
            android:id="@+id/btnEliminarDocente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Eliminar" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>